--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memory-game",
   "version": "0.1.0",
-  "homepage": "https://wardasanam.github.io/memory-game",
+  "homepage": "https://wardasanam.github.io/memory-game/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
